spacing and copy fixes on mentor page

--- a/less/angular/pages/mentor.less
+++ b/less/angular/pages/mentor.less
@@ -12,7 +12,7 @@
     width: 100%;
   }
 
-  .row {
+  .row:last-child {
     margin-bottom: 4rem;
   }
 
